--- a/index.html
+++ b/index.html
@@ -14,20 +14,27 @@
 
     <title>Rock, Paper, Scissors</title>
 
-    Score Rules You Picked The House Picked You Win You Lose Play Again
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div class="container">
+      <header class="scoreboard">
+        <div class="title">
+          <h1>ROCK</h1>
+          <h1>PAPER</h1>
+          <h1>SCISSORS</h1>
+        </div>
+        <div class="score">
+          <span class="score-text">SCORE</span>
+          <span class="score-number dark-text">0</span>
+        </div>
+      </header>
+    </div>
     <div class="attribution">Coded by <a href="#">Your Name Here</a>.</div>
   </body>
 </html>
